--- a/LAB2.2
+++ b/LAB2.2
@@ -10,34 +10,61 @@
 
 int s = -1;
 int count = 62411;
+int speedcase = 1;
 
-ISR (INT0_vect) { //direction config
+ISR (INT0_vect) {
   if (s < 0)
   {
     s = 1;
+    Serial.print("Green -> Yellow -> Red :");
+    Serial.print(count*-6.4e-2,0);
+    Serial.print("ms \t\r");
   }
   else if (s > 0)
   {
     s = -1;
+    Serial.print("Red -> Yellow -> Green :");
+    Serial.print(count*-6.4e-2,0);
+    Serial.print("ms \t\r");
   }
 }
 
-ISR (INT1_vect) { //speed config
-  switch (count) {
-    case 62411:
+ISR (INT1_vect) {
+switch (speedcase) {
+    case 1:
+      speedcase++;
       count = 59286;
+      Serial.print("Red -> Yellow -> Green :");
+      Serial.print(count*-6.4e-2,0);
+      Serial.print("ms \t\r");
       break;
-    case 59286:
+    case 2:
+      speedcase++;
       count = 56161;
+      Serial.print("Red -> Yellow -> Green :");
+      Serial.print(count*-6.4e-2,0);
+      Serial.print("ms \t\r");
       break;
-    case 56161:
+    case 3:
+      speedcase++;
       count = 53036;
+      Serial.print("Red -> Yellow -> Green :");
+      Serial.print(count*-6.4e-2,0);
+      Serial.print("ms \t\r");
       break;
-    case 53036:
+    case 4:
+      speedcase++;
       count = 49911;
+      Serial.print("Red -> Yellow -> Green :");
+      Serial.print(count*-6.4e-2,0);
+      Serial.print("ms \t\r");
       break;
-    default:
+    case 5:
+      speedcase = 1;
       count = 62411;
+      Serial.print("Red -> Yellow -> Green :");
+      Serial.print(count*-6.4e-2,0);
+      Serial.print("ms \t\r");
       break;
   }
 }
@@ -83,6 +110,7 @@ ISR(TIMER1_OVF_vect) {
 
 int main ()
 {
+  Serial.begin(9600);
   DDRD = 0b11110000;      //Port out/in setup45
   EICRA = EICRA | 0b00000010;  //interrupt setup
   EIMSK = EIMSK | 0b00000011;         //enable interrupt "INT0"
