--- a/LAB2.2
+++ b/LAB2.2
@@ -31,35 +31,35 @@ ISR (INT0_vect) {
 
 ISR (INT1_vect) {
 switch (speedcase) {
-    case 1:
+    case 1: //speed 400ms
       speedcase++;
       count = 59286;
       Serial.print("Red -> Yellow -> Green :");
       Serial.print(count*-6.4e-2,0);
       Serial.print("ms \t\r");
       break;
-    case 2:
+    case 2: //speed 600ms
       speedcase++;
       count = 56161;
       Serial.print("Red -> Yellow -> Green :");
       Serial.print(count*-6.4e-2,0);
       Serial.print("ms \t\r");
       break;
-    case 3:
+    case 3: //speed 800ms
       speedcase++;
       count = 53036;
       Serial.print("Red -> Yellow -> Green :");
       Serial.print(count*-6.4e-2,0);
       Serial.print("ms \t\r");
       break;
-    case 4:
+    case 4: //speed 1000ms
       speedcase++;
       count = 49911;
       Serial.print("Red -> Yellow -> Green :");
       Serial.print(count*-6.4e-2,0);
       Serial.print("ms \t\r");
       break;
-    case 5:
+    case 5: //speed 200ms
       speedcase = 1;
       count = 62411;
       Serial.print("Red -> Yellow -> Green :");
