--- a/LAB2.2
+++ b/LAB2.2
@@ -169,8 +169,5 @@ int main ()
 
   sei();           //Turn on GLOBAL interrupt
 
-  while (1){//loop do noting waiting for interrupt
-  Serial.print(1);
-  delay(1000);
-  }
+  while (1);  //loop do noting waiting for interrupt
 }
